# mcp-authz

./: .gitignore  Dockerfile.agent  LICENSE  README.md  docker-compose.demo.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: proxy_entrypoint.py
demo/agent/: agent.py
demo/mcp_server/: server.py
docker/: Dockerfile.proxy  Dockerfile.server  docker-compose.demo.yml
docs/: how-anomaly-detection-works.md  how-delegation-works.md  how-policy-works.md  threat-model.md
mcp_authz/: __init__.py  baseline.py  delegation.py  policy.py  proxy.py
tests/: test_mcp_authz.py
